--- a/info.html
+++ b/info.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="tcec,chess,engine,live,game,broadcast,super x1,super x2,event" />
   </head>
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="dist/css/custom.css?v=1000000000000000000043" rel="stylesheet">
@@ -11,21 +10,23 @@
    <main role="main" class="container">
       <div class="row">
          <div class="col-12">
-            <h3>Live</h3>
-            <b>TCEC</b> Season 14 Division 4 is currently ongoing
-            <a href="https://tcec.chessdom.com" target="_blank">https://tcec.chessdom.com</a>
+            <h3>Dues X</h3>
+            Deus X is a custom, privately trained set of Neural Net weights. They were created by Albert Silver using the lc0 suite of tools. You can view more information at <a href="http://lczero.org">lczero.org</a>.
+           <br>
+           The weights were trained exclusively using lc0 training code and run on the lc0 binary.
          </div>
 
          <div class="col-12">
-            <h3>Bonus</h3>
-            <b>TCEC</b> Bonus Rounds - Check For Live Broadcast
-            <a href="https://tcecbonus.club" target="_blank">https://tcecbonus.club</a>
-         </div>
-
-         <div class="col-12">
-            <h3>GUI Issues/Requests</h3>
-            Please file an issue on GitHub:
-            <a href="https://github.com/scs-ben/tcec-gui/issues" target="_blank">https://github.com/scs-ben/tcec-gui/issues</a>
+            <h3>This Match</h3>
+            This match is a fun match to see if Deus X is capable of dethroning the might Stockfish.
+           <br>
+           It is played on the same hardware, same time control, and with same openings as a 40 game match with lc0 (11248 + 32072 playing with <= 16 pieces).
+           <br>
+           That match ended with a score of SF: +7 =31 -2.
+           <br>
+           You can download that <a href="http://chess.webphactory.net/lc0-sfdev.pgn">PGN here</a>
+           <br>
+           <a href="http://chess.webphactory.net/event.pgn">Current Match PGN</a>
          </div>
       </div>
    </main>
