--- a/live.html
+++ b/live.html
@@ -4,7 +4,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="tcec,chess,engine,live,game,broadcast,event" />
     <link id="favicon" rel="icon" href="img/favicon.ico">
 
     <title>Live Chess Broadcast</title>
@@ -228,13 +227,13 @@
                          <tr>
                            <td>
                              <a href="#" target="_blank" id="white-engine-chessprogramming">
-                               <img src="img/tcec.jpg" alt="tcec" class="engineimage" id="white-engine" />
+                               <img src="#" alt="white-engine-image" class="engineimage" id="white-engine" />
                              </a>
                            </td>
                            <td></td>
                            <td>
                              <a href="#" target="_blank" id="black-engine-chessprogramming">
-                               <img src="img/tcec.jpg" alt="tcec" class="engineimage" id="black-engine" />
+                               <img src="#" alt="black-engine-image" class="engineimage" id="black-engine" />
                              </a>
                            </td>
                          </tr>
