--- a/live.html
+++ b/live.html
@@ -675,7 +675,7 @@
         updatePgn();
       });
 
-      var socket = io.connect('http://chess.webpchactory.net:8888');
+      var socket = io.connect('http://chess.webphactory.net:8888');
      
       socket.on('crosstable', function(data){
          updateCrosstableData(data);
@@ -711,22 +711,6 @@
     <audio id="move_sound">
       <source src="dist/audio/movesound.mp3" type="audio/mpeg"><embed src="dist/audio/movesound.mp3">
     </audio>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(
-        ['_setAccount', 'UA-37458566-1'],
-        ['_trackPageview'],
-        ['b._setAccount', 'UA-1679851-1'],
-        ['b._trackPageview']
-      );
-     
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
   </body>
 </html>
 <!-- end -->
