--- a/live.html
+++ b/live.html
@@ -22,6 +22,7 @@
   </head>
 
   <body>
+    <main>
       <div class="row">
         <div class="col-md-12">
           <br>  
@@ -520,6 +521,7 @@
               </div>
             </div>
           </div>
+	</div>
 
         <div class="col-md-4">
          <ul class="nav nav-pills mb-1 nav-justified" id="pills-tab" role="tablist">
@@ -529,7 +531,7 @@
          </ul>
          <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane active show fade smallfont" id="pills-info" role="tabpanel" aria-labelledby="pills-info-tab">
-                <iframe src="#" id="info-frame" height="800" width="100%" frameborder="0"></iframe> 
+                <iframe src="http://chess.webphactory.net/info.html" id="info-frame" height="800" width="100%" frameborder="0"></iframe> 
             </div>
       </div>
    </div>
