--- a/info.html
+++ b/info.html
@@ -28,6 +28,21 @@
            <br>
            <a href="http://chess.webphactory.net/event.pgn">Current Match PGN</a>
          </div>
+        
+        <div class="col-12">
+            <h3>Hardware</h3>
+            CPU: AMD Threadripper 1920x @ 3.7GHz (Liquid Cooled). 
+            <br>
+            GPU: 2xRTX 2070.
+            <br>
+            Motherboard: ASRock X399 Taichi.
+            <br>
+            Ram: 4x16 DDR4 Crucial 3200 MHz.
+            <br>
+            Storage: 500GB NVME (with 6 men Syzygy).
+            <br>
+            OS: Ubuntu Server 18.04.1
+         </div>
       </div>
    </main>
 
