--- a/live.html
+++ b/live.html
@@ -677,7 +677,7 @@
         updatePgn();
       });
 
-      var socket = io.connect('http://chess.webphactory.net:8888');
+      var socket = io.connect('https://chess.webphactory.net:8888');
      
       socket.on('crosstable', function(data){
          updateCrosstableData(data);
