--- a/live.html
+++ b/live.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <main>
+    <main role="main" class="container">
       <div class="row">
         <div class="col-md-12">
           <br>  
