--- a/live.html
+++ b/live.html
@@ -531,7 +531,7 @@
          </ul>
          <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane active show fade smallfont" id="pills-info" role="tabpanel" aria-labelledby="pills-info-tab">
-                <iframe src="http://chess.webphactory.net/info.html" id="info-frame" height="800" width="100%" frameborder="0"></iframe> 
+                <iframe src="https://chess.webphactory.net/info.html" id="info-frame" height="800" width="100%" frameborder="0"></iframe> 
             </div>
       </div>
    </div>
