--- a/info.html
+++ b/info.html
@@ -23,10 +23,10 @@
            It is played on the same hardware, same time control, and with same openings as a 40 game match with lc0 (11248 + 32072 playing with <= 16 pieces).
            <br>
            That match ended with a score of SF: +7 =31 -2.
+           <br><hr>
+           You can download that <a href="https://chess.webphactory.net/lc0-sfdev.pgn">PGN here</a>
            <br>
-           You can download that <a href="http://chess.webphactory.net/lc0-sfdev.pgn">PGN here</a>
-           <br>
-           <a href="http://chess.webphactory.net/event.pgn">Current Match PGN</a>
+           <a href="https://chess.webphactory.net/event.pgn">Current Match PGN</a>
          </div>
         
         <div class="col-12">
