--- a/live.html
+++ b/live.html
@@ -55,7 +55,7 @@
                <a class="dropdown-item" href="https://tcec.chessdom.com/live.html" target="_blank">
                  Main live
                </a>
-               <a class="dropdown-item" href="http://legacy-tcec.chessdom.com/archive.php" target="_blank">
+               <a class="dropdown-item" href="https://cd.tcecbeta.club/archive.html" target="_blank">
                  Archive
                </a>
                <a class="dropdown-item" href="https://tcecbeta.club/live.html" target="_blank">
