Made schedule clickable

--- a/live.html
+++ b/live.html
@@ -82,7 +82,7 @@
             <div class="dropdown-menu" aria-labelledby="dd-download">
               <a class="dropdown-item" href="http://legacy-tcec.chessdom.com/archive/crosstable.json" target="_blank">Crosstable</a>
               <a class="dropdown-item" href="http://legacy-tcec.chessdom.com/archive/schedule.json" target="_blank">Schedule</a>
-              <a class="dropdown-item" href="http://legacy-tcec.chessdom.com/live/event.pgn" target="_blank">Event PGN</a>
+              <a class="dropdown-item" href="http://tcec.chessdom.com/event.pgn" target="_blank">Event PGN</a>
               <a class="dropdown-item" href="http://legacy-tcec.chessdom.com/live/live.pgn" target="_blank">Current PGN</a>
             </div>
           </li>
@@ -1185,7 +1185,7 @@
         </div>
         <div class="tab-pane fade smallfont scheduleclass" id="pills-sched" role="tabpanel" aria-labelledby="pills-sched-tab">
           <div id="schedule-wrapper">
-            <table id="schedule" class="table-dark table-striped">
+            <table id="schedule" class="table-dark table-striped table-hover schedulelistclass">
             </table>
           </div>
         </div>
@@ -1234,6 +1234,7 @@
                   </div>
                   <h4>The TCEC Grand Champions</h4>
                   <div class="about_row_content">
+                    Season 14: Stockfish | 
                     Season 13: Stockfish | 
                     Season 12: Stockfish | 
                     Season 11: Stockfish | 
