--- a/live.html
+++ b/live.html
@@ -1213,7 +1213,7 @@
                 &copy;<a target="_blank" href="https://arena.chessdom.com/">Chess Arena</a> 2010-2018
             </div>
             <div>
-                TCEC is powered by ... <a target="_blank" href="http://chessboardjs.com">chessboard.js</a> and <a target="_blank" href="https://github.com/gvreuls/cutechess">cutechess-cli</a>
+                TCEC is powered by ... <a target="_blank" href="http://chessboardjs.com">chessboard.js</a> and <a target="_blank" href="https://github.com/coolchess123/cutechess">cutechess-cli</a>
             </div>
           </div>
         </div>
