made twitch visible none

--- a/live.html
+++ b/live.html
@@ -1195,7 +1195,7 @@
 
       <div class="row">
           <div class="col-md-12 text-center d-none d-sm-block">
-            <div id="twitchvid"></div>
+            <div id="twitchvid" style="display:none;"></div>
           </div>
           <div class="col-md-12 text-center">
             <div>
