Fixed name, and engine rating got updated

--- a/live.html
+++ b/live.html
@@ -1216,7 +1216,7 @@
         </li>
         <li>
           <a class="nav-link" id="pills-tf-tab" data-toggle="pill" href="#pills-tf" role="tab" aria-controls="pills-tf" aria-selected="true">
-             <div class="fmedium fa  fa-info-circle d-none d-sm-block d-md-block">&ensp; Divsion Stats</div>
+             <div class="fmedium fa  fa-info-circle d-none d-sm-block d-md-block">&ensp; Division Stats</div>
              <div class="fmedium fa  fa-info-circle d-block d-sm-none d-md-none"></div>
           </a>
         </li>
